--- a/app/src/main/res/layout/fragment_shelf.xml
+++ b/app/src/main/res/layout/fragment_shelf.xml
@@ -3,9 +3,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:style="http://schemas.android.com/tools"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -23,6 +21,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="68dp"
             android:text="내 서랍"
+            android:textColor="@color/welaaa_grey_900"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,6 +54,7 @@
             android:layout_marginLeft="71dp"
             android:layout_marginTop="125dp"
             android:text="우주최강10조"
+            android:textColor="@color/welaaa_grey_900"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -74,8 +74,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="22dp"
                 android:layout_marginTop="19dp"
-                android:text="재생시간"
                 android:layout_marginEnd="238dp"
+                android:text="재생시간"
+                android:textColor="@color/welaaa_grey_600"
                 app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintTop_toTopOf="@+id/cl_shelf_rectangle" />
@@ -87,11 +88,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="12dp"
+                android:layout_marginEnd="238dp"
                 android:layout_marginBottom="19dp"
                 android:text="30분"
-                android:layout_marginEnd="238dp"
-                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
+                android:textColor="@color/welaaa_grey_800"
                 app:layout_constraintBottom_toBottomOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintTop_toBottomOf="@+id/tv_time" />
 
@@ -101,11 +103,11 @@
                 android:layout_height="52dp"
                 android:layout_marginVertical="12dp"
                 android:layout_marginStart="106dp"
+                android:layout_marginEnd="214dp"
                 android:background="@color/welaaa_grey_300"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
-                android:layout_marginEnd="214dp"
-                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"/>
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle" />
 
             <TextView
                 android:id="@+id/tv_audio"
@@ -115,8 +117,9 @@
                 android:layout_marginStart="130dp"
                 android:layout_marginTop="19dp"
                 android:layout_marginEnd="130dp"
-                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
                 android:text="오디오북"
+                android:textColor="@color/welaaa_grey_600"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintTop_toTopOf="@+id/cl_shelf_rectangle" />
 
@@ -127,11 +130,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="130dp"
                 android:layout_marginTop="12dp"
+                android:layout_marginEnd="130dp"
                 android:layout_marginBottom="19dp"
                 android:text="10권"
-                android:layout_marginEnd="130dp"
-                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
+                android:textColor="@color/welaaa_grey_800"
                 app:layout_constraintBottom_toBottomOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintTop_toBottomOf="@+id/tv_audio" />
 
@@ -141,9 +145,9 @@
                 android:layout_height="52dp"
                 android:layout_marginVertical="12dp"
                 android:layout_marginStart="214dp"
+                android:layout_marginEnd="106dp"
                 android:background="@color/welaaa_grey_300"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginEnd="106dp"
                 app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle" />
 
@@ -154,8 +158,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="238dp"
                 android:layout_marginTop="19dp"
-                android:text="클래스"
                 android:layout_marginEnd="22dp"
+                android:text="클래스"
+                android:textColor="@color/welaaa_grey_600"
                 app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintTop_toTopOf="@+id/cl_shelf_rectangle" />
@@ -167,8 +172,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="238dp"
                 android:layout_marginTop="12dp"
-                android:text="3회"
                 android:layout_marginEnd="22dp"
+                android:text="3회"
+                android:textColor="@color/welaaa_grey_800"
                 app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
                 app:layout_constraintTop_toBottomOf="@+id/tv_class" />
@@ -196,6 +202,7 @@
                 android:id="@+id/tab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginEnd="61dp"
                 android:background="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -204,34 +211,40 @@
                 app:tabBackground="@color/white"
                 app:tabIndicator="@color/welaaa_logo_green"
                 app:tabMode="fixed"
-                android:layout_marginStart="20dp"
                 app:tabRippleColor="@null"
                 app:tabSelectedTextColor="@color/welaaa_logo_green"
                 app:tabTextColor="@color/welaaa_grey_600">
 
                 <com.google.android.material.tabs.TabItem
+                    style="@style/TextAppearance.Welaaa.System3.Title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="최근 목록" />
 
                 <com.google.android.material.tabs.TabItem
+                    style="@style/TextAppearance.Welaaa.System3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="찜한 콘텐츠" />
+                    android:text="찜한 콘텐츠"
+                    android:textColor="@color/welaaa_grey_600" />
 
                 <com.google.android.material.tabs.TabItem
+                    style="@style/TextAppearance.Welaaa.System3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="다운로드" />
+                    android:text="다운로드"
+                    android:textColor="@color/welaaa_grey_600" />
 
                 <com.google.android.material.tabs.TabItem
+                    style="@style/TextAppearance.Welaaa.System3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="구매" />
+                    android:text="구매"
+                    android:textColor="@color/welaaa_grey_600" />
             </com.google.android.material.tabs.TabLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_item"
+                android:id="@+id/rv_shelf"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginHorizontal="20dp"
