--- a/app/src/main/res/layout/fragment_shelf.xml
+++ b/app/src/main/res/layout/fragment_shelf.xml
@@ -3,11 +3,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:style="http://schemas.android.com/tools"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ScrollViewFragment">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        style:layout_editor_absoluteX="0dp"
+        style:layout_editor_absoluteY="-364dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -192,70 +195,63 @@
                 app:layout_constraintTop_toTopOf="parent"
                 style:ignore="MissingConstraints" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_shelf_book"
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/v_line">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="61dp"
+                android:background="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/v_line"
+                app:tabBackground="@color/white"
+                app:tabIndicator="@color/welaaa_logo_green"
+                app:tabMode="fixed"
+                app:tabRippleColor="@null"
+                app:tabSelectedTextColor="@color/welaaa_logo_green"
+                app:tabTextColor="@color/welaaa_grey_600">
 
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tab"
-                    android:layout_width="match_parent"
+                <com.google.android.material.tabs.TabItem
+                    style="@style/TextAppearance.Welaaa.System3.Title"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="61dp"
-                    android:background="@color/white"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:tabBackground="@color/white"
-                    app:tabIndicator="@color/welaaa_logo_green"
-                    app:tabMode="fixed"
-                    app:tabRippleColor="@null"
-                    app:tabSelectedTextColor="@color/welaaa_logo_green"
-                    app:tabTextColor="@color/welaaa_grey_600">
+                    android:text="최근 목록" />
 
-                    <com.google.android.material.tabs.TabItem
-                        style="@style/TextAppearance.Welaaa.System3.Title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="최근 목록" />
+                <com.google.android.material.tabs.TabItem
+                    style="@style/TextAppearance.Welaaa.System3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="찜한 콘텐츠"
+                    android:textColor="@color/welaaa_grey_600" />
 
-                    <com.google.android.material.tabs.TabItem
-                        style="@style/TextAppearance.Welaaa.System3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="찜한 콘텐츠"
-                        android:textColor="@color/welaaa_grey_600" />
+                <com.google.android.material.tabs.TabItem
+                    style="@style/TextAppearance.Welaaa.System3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="다운로드"
+                    android:textColor="@color/welaaa_grey_600" />
 
-                    <com.google.android.material.tabs.TabItem
-                        style="@style/TextAppearance.Welaaa.System3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="다운로드"
-                        android:textColor="@color/welaaa_grey_600" />
+                <com.google.android.material.tabs.TabItem
+                    style="@style/TextAppearance.Welaaa.System3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="구매"
+                    android:textColor="@color/welaaa_grey_600" />
+            </com.google.android.material.tabs.TabLayout>
 
-                    <com.google.android.material.tabs.TabItem
-                        style="@style/TextAppearance.Welaaa.System3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="구매"
-                        android:textColor="@color/welaaa_grey_600" />
-                </com.google.android.material.tabs.TabLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_shelf"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_marginHorizontal="20dp"
-                    android:layout_marginTop="19dp"
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tab"
-                    app:spanCount="3"
-                    tools:listitem="@layout/item_body_shelf" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_shelf"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="19dp"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tab"
+                app:spanCount="3"
+                tools:listitem="@layout/item_body_shelf" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
