--- a/app/src/main/res/layout/item_month.xml
+++ b/app/src/main/res/layout/item_month.xml
@@ -21,8 +21,8 @@
 
         <ImageView
             android:id="@+id/thumbnailImage"
-            android:layout_width="100dp"
-            android:layout_height="147dp"
+            android:layout_width="156dp"
+            android:layout_height="228dp"
             app:bookImage="@{homeBook.image}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,26 +30,44 @@
 
         <TextView
             android:id="@+id/tv_book_title"
+            style="@style/TextAppearance.Welaaa.System3.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:lineSpacingExtra="5sp"
             android:text="@{homeBook.title}"
-            android:textSize="14sp"
+            android:textColor="@color/welaaa_grey_800"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/thumbnailImage"
             tools:text="가나다" />
 
         <TextView
             android:id="@+id/tv_book_author"
+            style="@style/TextAppearance.Welaaa.System3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:lineSpacingExtra="5sp"
             android:text="@{homeBook.author}"
-            android:textSize="14sp"
+            android:textColor="@color/welaaa_grey_600"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_book_title"
             tools:text="라마바" />
 
+        <TextView
+            android:id="@+id/tv_book_story"
+            style="@style/TextAppearance.Welaaa.System4.Medium"
+            android:layout_width="156dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:ellipsize="end"
+            android:lineSpacingExtra="5sp"
+            android:maxLines="2"
+            android:text="@{homeBook.description}"
+            android:textColor="@color/welaaa_grey_600"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_book_author"
+            tools:text="라마바" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
